fix: Update demo styling to fix misc UX bugs
- update background position in body to make sure page background
  extends all the way to the edges of the page
- hide box shadow for now on iframe for now but keep in code to bring
  back into the next PR
- adjust open_chat nesting to use img instead of svg directly since the
  html has changed to use an img tag
- postion iframe closer to the edge of the window to prevent it from
  covering up parts of the from
- add some styling to the iframe window to make it pop a bit more and
  fit better into the page
- fix typo in active textarea styles

--- a/demo/hardFunDemo.css
+++ b/demo/hardFunDemo.css
@@ -19,13 +19,11 @@ body {
       #1a0d0b22 60%,
       #00000000 80%
     );
-  background-size:
-    120% 120%,
-    120% 120%;
+  background-size: cover, cover;
   background-repeat: no-repeat;
   background-position:
-    -10% 70%,
-    110% 20%;
+    -20% 70%,
+    120% 20%;
   background-clip: padding-box;
 }
 
@@ -35,31 +33,49 @@ body {
   right: 20px;
   width: 70px;
   height: 70px;
-  background: white;
   border: none;
   border-radius: 50%;
-  padding: 1px;
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-}
+  /* box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); */
 
-#open_chat svg {
-  width: 100%;
-  height: 100%;
+  background-color: #1a1a1a;
+  padding: 0px;
+  border: 1px solid rgb(247, 73, 40, 0.75);
+  box-sizing: border-box;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; /* Ensures the image fits within the size */
+  }
 }
 
 #iframe-root {
   position: fixed;
   bottom: 100px;
-  right: 20px;
+  right: 5px;
   width: 400px;
   height: 700px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   display: none;
   visibility: hidden;
+  background: #121212;
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  box-shadow:
+    0 4px 24px rgba(0, 0, 0, 0.4),
+    inset 0 0 1px rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  overflow: hidden; /* Ensure rounded corners clip iframe content */
+
+  iframe {
+    border: none; /* Remove default iframe border */
+    width: 100%;
+    height: 100%;
+    border-radius: 10px; /* Match parent's border radius */
+  }
 }
 
 #iframe-root.open {
@@ -126,7 +142,7 @@ body {
     }
 
     input:active,
-    textarea:ative {
+    textarea:active {
       border-color: #19b6e9;
       color: white !important;
       outline: none;
